k8s/service.yaml
apiVersion: v1
kind: Service   
metadata:
  name: count-service
  namespace: refundai
spec: 
  selector:
    app: count-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
